kubernetes/apps/flux-system/flux-operator/app/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
spec:
  hostnames:
    - flux-operator.sed01.celest.io
  parentRefs:
    - name: traefik-external
      sectionName: http
      kind: Gateway
  rules:
    - backendRefs:
        - name: flux-operator
          namespace: flux-system
          port: 9080
